# FastAPI_train_project

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_05_21_2252-9291a3283e1b_create_table.py  2024_05_21_2308-47ad86954581_create_users_table.py  2024_05_21_2323-cce27126d4dd_create_post_table.py  2024_05_28_2344-e77fce87f2dc_create_profile_table.py  2024_07_07_1849-d4ca11ac0dfa_create_orders_table.py  2024_07_07_1939-de792f91cb55_create_orders_product_associate_table.py  2024_07_07_2231-a883e6e8313d_add_count_column_to_association_table.py  2024_07_07_2303-4f5a0e6d662d_add_unit_price_column_to_association_.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
