[tool.poetry]
name = "fastapi-train"
version = "0.1.0"
description = ""
authors = ["Egor_Yakovlev1 <egor.yakovlev.95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
poetry = "^1.8.2"
alembic = "^1.13.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
